Handle more complex shcemas
